--- a/package.json
+++ b/package.json
@@ -1,33 +1,39 @@
 {
-	"name": "cryptonote-nodejs-pool",
-	"version": "1.4.1",
-	"license": "GPL-2.0",
-	"author": "Daniel Vandal",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/dvandal/cryptonote-nodejs-pool.git"
-	},
-	"dependencies": {
-		"async": "^1.5.2",
-		"base58-native": "*",
-		"bignum": "*",
-		"bufferutil": "*",
-		"cli-color": "*",
-		"cryptoforknote-util": "git+https://github.com/MoneroOcean/node-cryptoforknote-util.git",
-		"cryptonight-hashing": "git+https://github.com/MoneroOcean/node-cryptonight-hashing.git",
-		"dateformat": "^4.5.1",
-		"domexception": "*",
-		"mailgun.js": "*",
-		"node-telegram-bot-api": "*",
-		"nodemailer": "^6.4.18",
-		"nodemailer-sendmail-transport": "*",
-		"redis": "*",
-		"socket.io": "^3.1.1",
-		"time-ago": "*",
-		"turtlecoin-multi-hashing": "git+https://github.com/turtlecoin/turtlecoin-crypto.git",
-		"utf-8-validate": "*"
-	},
-	"engines": {
-		"node": ">=8.11.3"
-	}
+  "name": "cryptonote-nodejs-pool",
+  "version": "2.0.0",
+  "license": "GPL-2.0",
+  "author": "Daniel Vandal",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dvandal/cryptonote-nodejs-pool.git"
+  },
+  "dependencies": {
+    "async": "1.5.2",
+    "axios": "^1.7.3",
+    "base58-native": "^0.1.4",
+    "bn.js": "^5.2.1",
+    "bufferutil": "",
+    "cli-color": "^2.0.4",
+    "cryptoforknote-util": "git+https://github.com/ZephyrProtocol/zephyr-cryptoforknote-util.git",
+    "cryptonight-hashing": "git+https://github.com/MoneroOcean/node-cryptonight-hashing.git",
+    "dateformat": "^4.6.3",
+    "domexception": "",
+    "express": "^4.19.2",
+    "mailgun.js": "^12.0.3",
+    "node-fetch": "^3.3.2",
+    "node-telegram-bot-api": "^0.66.0",
+    "nodemailer": "^6.4.18",
+    "nodemailer-sendmail-transport": "",
+    "redis": "3.1.2",
+    "request": "^2.88.2",
+    "socket.io": "^4.7.5",
+    "time-ago": "",
+    "utf-8-validate": ""
+  },
+  "engines": {
+    "node": ">=8.11.3"
+  },
+  "scripts": {
+    "start": "node init.js"
+  }
 }
